@startuml
package "com.example" {
  class Main {
    + {static} main(String[])
    - {static} generateTimetableInteractive()
    - {static} generateTimetableFromFile()
    - {static} printExistingTimetable()
  }

  class SubjectSession {
    - String subject
    - int duration
    - String teacher
    + getSubject()
    + getDuration()
    + getTeacher()
  }

  class UserInputHandler {
    - Scanner scanner
    + getSubjects()
    + getDurations()
    + getTeachers()
    + getWeekDays()
  }

  class TimetableGenerator {
    + generateTimetable()
    + generateDailySlots()
  }

  class TimetablePrinter {
    + printTimetables()
  }

  class TimetableFileHandler {
    + saveToJson()
    + loadInputFile()
  }
}

Main --> UserInputHandler
Main --> TimetableGenerator
Main --> TimetablePrinter
Main --> TimetableFileHandler
TimetableGenerator --> SubjectSession
@enduml